更新九州七日遊行程表
- Day 1: 調整熊本熊廣場表演時間為 13:00-15:00，重新安排行程順序
- Day 1: 晚餐改為菅乃屋上通店（距離 OMO5 步行 5 分鐘）
- Day 3: 增加飯店會席晚餐與溫泉夜景行程
- Day 4: 別府地獄巡禮時間調整為 15:00-17:00
- Day 4: Cosmos 更新為完整名稱（Cosmos Beppu Nakashima）
- Day 4: 增加入住別府站前超級飯店行程
- Day 5: 九州自然動物園時間調整為 10:00-12:30
- Day 5: 午餐後增加入住溫柔之鄉行程
- Day 6: 還車後增加入住東橫INN行程，調整還車時間為 15:30
- 航班: 回程增加 20:50 抵達桃園機場資訊
- 所有飯店標題增加 Google Map 連結

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                 <span class="flight-icon">🛬</span>
                 <div class="flight-details">
                     <div class="route">回程：福岡 FUK → 桃園 TPE</div>
-                    <div class="time">2月22日（日）19:10 福岡機場起飛（飛行約2.5小時）</div>
+                    <div class="time">2月22日（日）19:10 福岡機場起飛 → 20:50 抵達桃園機場（飛行約2.5小時）</div>
                 </div>
             </div>
         </div>
@@ -289,7 +289,7 @@
                 <span class="accommodation-badge">🏨 宿：熊本</span>
             </div>
             <div class="hotel-info">
-                <h4>🏨 <a href="https://hoshinoresorts.com/CH/hotels/0000000314/rooms/0000000003" target="_blank">OMO5 熊本 by 星野集團</a></h4>
+                <h4>🏨 <a href="https://maps.google.com/?q=OMO5熊本" target="_blank">OMO5 熊本 by 星野集團</a> | <a href="https://hoshinoresorts.com/CH/hotels/0000000314/rooms/0000000003" target="_blank" style="font-size: 0.85em;">官網</a></h4>
                 <div class="hotel-details">
                     <span>🛏️ YAGURA 房 A</span>
                     <span>👥 3成人1兒童</span>
@@ -330,12 +330,12 @@
                 </div>
 
                 <div class="event">
-                    <div class="event-time">12:30 - 13:30</div>
+                    <div class="event-time">12:30 - 13:00</div>
                     <div class="event-card">
                         <div class="event-title">
                             <h3>🍱 <a href="https://maps.google.com/?q=桜の馬場城彩苑" target="_blank">櫻之馬場城彩苑</a></h3>
                         </div>
-                        <p class="event-desc">城下町風情商店街，享用午餐與選購伴手禮</p>
+                        <p class="event-desc">城下町風情商店街，快速午餐與選購伴手禮</p>
                         <a href="https://maps.google.com/?q=桜の馬場城彩苑" target="_blank" class="map-link">📍 Google Map</a>
                         <span class="tag tag-food">美食</span>
                         <span class="tag tag-shopping">購物</span>
@@ -343,11 +343,30 @@
                 </div>
 
                 <div class="transport-between">
-                    <div class="transport-line walk">🚶 步行 約5分鐘</div>
+                    <div class="transport-line train">🚃 路面電車 約10分鐘 ¥170 → 熊本站</div>
                 </div>
 
                 <div class="event">
-                    <div class="event-time">13:30 - 16:00</div>
+                    <div class="event-time">13:00 - 15:00</div>
+                    <div class="event-card">
+                        <div class="event-title">
+                            <h3>🐻 <a href="https://maps.google.com/?q=くまモンスクエア" target="_blank">熊本熊廣場</a></h3>
+                        </div>
+                        <p class="event-desc">觀看熊本熊部長表演</p>
+                        <a href="https://maps.google.com/?q=くまモンスクエア" target="_blank" class="map-link">📍 Google Map</a>
+                        <span class="tag tag-attraction">景點</span>
+                        <div class="reservation-info">
+                            📅 表演時間查詢：<a href="https://kumamon-sq.jp/" target="_blank">kumamon-sq.jp</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="transport-between">
+                    <div class="transport-line train">🚃 路面電車 約10分鐘 ¥170 → 熊本城前</div>
+                </div>
+
+                <div class="event">
+                    <div class="event-time">15:15 - 17:00</div>
                     <div class="event-card">
                         <div class="event-title">
                             <h3>🏯 <a href="https://maps.google.com/?q=熊本城" target="_blank">熊本城</a></h3>
@@ -363,7 +382,7 @@
                 </div>
 
                 <div class="event">
-                    <div class="event-time">16:00 - 16:30</div>
+                    <div class="event-time">17:10 - 17:40</div>
                     <div class="event-card">
                         <div class="event-title">
                             <h3>🌆 <a href="https://maps.google.com/?q=熊本市役所" target="_blank">熊本市役所十四樓展望台</a></h3>
@@ -379,26 +398,7 @@
                 </div>
 
                 <div class="event">
-                    <div class="event-time">17:00 - 18:00</div>
-                    <div class="event-card">
-                        <div class="event-title">
-                            <h3>🐻 <a href="https://maps.google.com/?q=くまモンスクエア" target="_blank">熊本熊廣場</a></h3>
-                        </div>
-                        <p class="event-desc">觀看熊本熊部長表演</p>
-                        <a href="https://maps.google.com/?q=くまモンスクエア" target="_blank" class="map-link">📍 Google Map</a>
-                        <span class="tag tag-attraction">景點</span>
-                        <div class="reservation-info">
-                            📅 表演時間查詢：<a href="https://kumamon-sq.jp/" target="_blank">kumamon-sq.jp</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="transport-between">
-                    <div class="transport-line walk">🚶 步行 約3分鐘</div>
-                </div>
-
-                <div class="event">
-                    <div class="event-time">18:00 - 18:30</div>
+                    <div class="event-time">17:50 - 18:20</div>
                     <div class="event-card">
                         <div class="event-title">
                             <h3>🛍️ <a href="https://maps.google.com/?q=肥後よかモン市場" target="_blank">肥後YOKAMON市場</a></h3>
@@ -414,28 +414,28 @@
                 </div>
 
                 <div class="event">
-                    <div class="event-time">19:00 - 20:30</div>
+                    <div class="event-time">18:30 - 20:00</div>
                     <div class="event-card">
                         <div class="event-title">
-                            <h3>🥩 <a href="https://maps.google.com/?q=馬桜+熊本駅店" target="_blank">晚餐：馬櫻</a></h3>
+                            <h3>🥩 <a href="https://maps.google.com/?q=菅乃屋+上通店" target="_blank">晚餐：菅乃屋 上通店</a></h3>
                         </div>
-                        <p class="event-desc">品嚐熊本名物馬肉料理</p>
-                        <a href="https://maps.google.com/?q=馬桜+熊本駅店" target="_blank" class="map-link">📍 Google Map</a>
+                        <p class="event-desc">熊本名店，品嚐極品馬肉料理與馬肉壽司，距離 OMO5 步行 5 分鐘</p>
+                        <a href="https://maps.google.com/?q=菅乃屋+上通店" target="_blank" class="map-link">📍 Google Map</a>
                         <span class="tag tag-food">美食</span>
-                        <span class="tag tag-reservation">需預約</span>
+                        <span class="tag tag-reservation">建議預約</span>
                         <div class="reservation-info">
-                            📞 預約電話：<a href="tel:096-326-5070">096-326-5070</a><br>
-                            🌐 預約網站：<a href="https://www.umasakura.com/" target="_blank">www.umasakura.com</a>
+                            📞 預約電話：<a href="tel:096-322-0133">096-322-0133</a><br>
+                            🌐 預約網站：<a href="https://www.suganoya.com/" target="_blank">www.suganoya.com</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="transport-between">
-                    <div class="transport-line walk">🚶 步行 約10分鐘</div>
+                    <div class="transport-line walk">🚶 步行 約5分鐘</div>
                 </div>
 
                 <div class="event">
-                    <div class="event-time">21:00</div>
+                    <div class="event-time">20:15</div>
                     <div class="event-card">
                         <div class="event-title">
                             <h3>🏨 入住 OMO5 熊本</h3>
@@ -457,7 +457,7 @@
                 <span class="accommodation-badge">🏨 宿：高千穗</span>
             </div>
             <div class="hotel-info">
-                <h4>🏨 <a href="https://www.agoda.com/sl/eQk4YiI18Ko" target="_blank">SOLEST 高千穗飯店</a></h4>
+                <h4>🏨 <a href="https://maps.google.com/?q=SOLEST高千穂ホテル" target="_blank">SOLEST 高千穗飯店</a> | <a href="https://www.agoda.com/sl/eQk4YiI18Ko" target="_blank" style="font-size: 0.85em;">Agoda</a></h4>
                 <div class="hotel-details">
                     <span>🛏️ 標準房 - 2張小型雙人床</span>
                     <span>👥 2成人2兒童（需另外告知）</span>
@@ -598,7 +598,7 @@
                 </div>
 
                 <div class="event">
-                    <div class="event-time">18:00 - 19:00</div>
+                    <div class="event-time">18:00 - 18:30</div>
                     <div class="event-card">
                         <div class="event-title">
                             <h3>⛩️ <a href="https://maps.google.com/?q=高千穂神社" target="_blank">高千穗神社</a></h3>
@@ -608,13 +608,34 @@
                         <span class="tag tag-attraction">景點</span>
                     </div>
                 </div>
+
+                <div class="transport-between">
+                    <div class="transport-line walk">🚶 步行 約5分鐘</div>
+                </div>
+
+                <div class="event">
+                    <div class="event-time">19:00 - 20:30</div>
+                    <div class="event-card">
+                        <div class="event-title">
+                            <h3>🥩 <a href="https://maps.google.com/?q=高千穂牛レストラン和" target="_blank">晚餐：高千穂牛レストラン和</a></h3>
+                        </div>
+                        <p class="event-desc">品嚐當地高千穗牛燒肉，鮮嫩多汁的在地美食</p>
+                        <a href="https://maps.google.com/?q=高千穂牛レストラン和" target="_blank" class="map-link">📍 Google Map</a>
+                        <span class="tag tag-food">美食</span>
+                        <div class="reservation-info">
+                            🕐 營業時間：11:00-14:30 / 17:00-21:00<br>
+                            📅 定休日：週三<br>
+                            📞 電話：<a href="tel:0982-73-1109">0982-73-1109</a>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="notes">
                 <h4>注意事項</h4>
                 <ul>
                     <li>阿蘇火山口可能因火山活動而關閉，建議出發前確認</li>
                     <li>飯店需另外告知有2位兒童同行</li>
-                    <li>入住後改為步行前往神社</li>
+                    <li>入住後改為步行前往神社及餐廳</li>
                 </ul>
             </div>
         </div>
@@ -629,7 +650,7 @@
                 <span class="accommodation-badge">🏨 宿：黑川溫泉</span>
             </div>
             <div class="hotel-info">
-                <h4>🏨 <a href="https://www.booking.com/hotel/jp/ryokan-wakaba.zh-tw.html" target="_blank">若葉日式旅館 Ryokan Wakaba</a></h4>
+                <h4>🏨 <a href="https://maps.google.com/?q=黒川温泉+旅館わかば" target="_blank">若葉日式旅館 Ryokan Wakaba</a> | <a href="https://www.booking.com/hotel/jp/ryokan-wakaba.zh-tw.html" target="_blank" style="font-size: 0.85em;">Booking</a></h4>
                 <div class="hotel-details">
                     <span>🛏️ 日式客房 - 帶私人浴室（北樓）</span>
                     <span>👥 2成人2兒童</span>
@@ -718,11 +739,32 @@
                         <div class="event-title">
                             <h3>🏨 入住若葉日式旅館</h3>
                         </div>
-                        <p class="event-desc">入住溫泉旅館，享受露天風呂與會席料理晚餐</p>
+                        <p class="event-desc">入住溫泉旅館，辦理入住手續</p>
                         <a href="https://maps.google.com/?q=黒川温泉+旅館わかば" target="_blank" class="map-link">📍 Google Map</a>
                         <span class="tag tag-hotel">住宿</span>
-                        <span class="tag tag-nature">溫泉</span>
+                    </div>
+                </div>
+
+                <div class="event">
+                    <div class="event-time">18:30 - 20:00</div>
+                    <div class="event-card">
+                        <div class="event-title">
+                            <h3>🍽️ 旅館會席晚餐</h3>
+                        </div>
+                        <p class="event-desc">享用旅館精緻會席料理晚餐</p>
                         <span class="tag tag-food">晚餐</span>
+                    </div>
+                </div>
+
+                <div class="event">
+                    <div class="event-time">20:00 - 21:00</div>
+                    <div class="event-card">
+                        <div class="event-title">
+                            <h3>♨️ 溫泉 & 黑川溫泉街夜景</h3>
+                        </div>
+                        <p class="event-desc">享受露天風呂，漫步黑川溫泉街欣賞夜景</p>
+                        <span class="tag tag-nature">溫泉</span>
+                        <span class="tag tag-attraction">夜景</span>
                     </div>
                 </div>
             </div>
@@ -744,7 +786,7 @@
                 <span class="accommodation-badge">🏨 宿：別府</span>
             </div>
             <div class="hotel-info">
-                <h4>🏨 <a href="https://go-superhotel.reservation.jp/zh-tw/hotels/sh-beppu" target="_blank">別府站前超級飯店 Super Hotel</a></h4>
+                <h4>🏨 <a href="https://maps.google.com/?q=スーパーホテル別府駅前" target="_blank">別府站前超級飯店 Super Hotel</a> | <a href="https://go-superhotel.reservation.jp/zh-tw/hotels/sh-beppu" target="_blank" style="font-size: 0.85em;">官網</a></h4>
                 <div class="hotel-details">
                     <span>🛏️ 禁菸好萊塢雙床房</span>
                     <span>👥 2成人2兒童</span>
@@ -802,7 +844,7 @@
                 </div>
 
                 <div class="event">
-                    <div class="event-time">16:00 - 18:00</div>
+                    <div class="event-time">15:00 - 17:00</div>
                     <div class="event-card">
                         <div class="event-title">
                             <h3>🔥 <a href="https://maps.google.com/?q=海地獄" target="_blank">別府地獄巡禮</a></h3>
@@ -818,13 +860,29 @@
                 </div>
 
                 <div class="event">
-                    <div class="event-time">18:30 - 19:30</div>
+                    <div class="event-time">17:30</div>
                     <div class="event-card">
                         <div class="event-title">
-                            <h3>💊 <a href="https://maps.google.com/?q=コスモス+別府" target="_blank">Cosmos 藥妝店</a></h3>
+                            <h3>🏨 入住別府站前超級飯店</h3>
                         </div>
-                        <p class="event-desc">採購日本藥妝與生活用品</p>
-                        <a href="https://maps.google.com/?q=コスモス+別府" target="_blank" class="map-link">📍 Google Map</a>
+                        <p class="event-desc">辦理入住，放置行李</p>
+                        <a href="https://maps.google.com/?q=スーパーホテル別府駅前" target="_blank" class="map-link">📍 Google Map</a>
+                        <span class="tag tag-hotel">住宿</span>
+                    </div>
+                </div>
+
+                <div class="transport-between">
+                    <div class="transport-line walk">🚶 步行 約5分鐘</div>
+                </div>
+
+                <div class="event">
+                    <div class="event-time">18:00 - 19:00</div>
+                    <div class="event-card">
+                        <div class="event-title">
+                            <h3>💊 <a href="https://maps.google.com/?q=ドラッグストアコスモス+別府中島店" target="_blank">Cosmos Beppu Nakashima 藥妝店</a></h3>
+                        </div>
+                        <p class="event-desc">ドラッグストアコスモス 別府中島店 - 採購日本藥妝與生活用品</p>
+                        <a href="https://maps.google.com/?q=ドラッグストアコスモス+別府中島店" target="_blank" class="map-link">📍 Google Map</a>
                         <span class="tag tag-shopping">購物</span>
                     </div>
                 </div>
@@ -841,7 +899,7 @@
                 <span class="accommodation-badge">🏨 宿：由布院</span>
             </div>
             <div class="hotel-info">
-                <h4>🏨 <a href="https://www.yawaraginosato.com/zh-tw/" target="_blank">溫柔之鄉 Yawaraginosato Yadoya</a></h4>
+                <h4>🏨 <a href="https://maps.google.com/?q=やわらぎの郷やどや" target="_blank">溫柔之鄉 Yawaraginosato Yadoya</a> | <a href="https://www.yawaraginosato.com/zh-tw/" target="_blank" style="font-size: 0.85em;">官網</a></h4>
                 <div class="hotel-details">
                     <span>🛏️ 和洋式客房</span>
                     <span>👥 2成人2兒童</span>
@@ -852,7 +910,7 @@
             </div>
             <div class="timeline">
                 <div class="event">
-                    <div class="event-time">09:00 - 12:00</div>
+                    <div class="event-time">10:00 - 12:30</div>
                     <div class="event-card">
                         <div class="event-title">
                             <h3>🦁 <a href="https://maps.google.com/?q=アフリカンサファリ" target="_blank">九州自然動物園</a></h3>
@@ -879,11 +937,11 @@
                 </div>
 
                 <div class="transport-between">
-                    <div class="transport-line drive">🚗 開車 約5分鐘 → 旅館</div>
+                    <div class="transport-line walk">🚶 步行 約10分鐘</div>
                 </div>
 
                 <div class="event">
-                    <div class="event-time">14:30</div>
+                    <div class="event-time">14:15</div>
                     <div class="event-card">
                         <div class="event-title">
                             <h3>🏨 入住溫柔之鄉</h3>
@@ -938,7 +996,7 @@
                 <span class="accommodation-badge">🏨 宿：福岡</span>
             </div>
             <div class="hotel-info">
-                <h4>🏨 <a href="https://www.toyoko-inn.com/china/search/detail/00043" target="_blank">東橫INN 博多口站前</a></h4>
+                <h4>🏨 <a href="https://maps.google.com/?q=東横イン博多口駅前" target="_blank">東橫INN 博多口站前</a> | <a href="https://www.toyoko-inn.com/china/search/detail/00043" target="_blank" style="font-size: 0.85em;">官網</a></h4>
                 <div class="hotel-details">
                     <span>🛏️ 單人房 × 2間</span>
                     <span>👥 分開訂房</span>
@@ -998,13 +1056,29 @@
                 </div>
 
                 <div class="event">
-                    <div class="event-time">18:30</div>
+                    <div class="event-time">15:30</div>
                     <div class="event-card">
                         <div class="event-title">
                             <h3>🚗 福岡還車</h3>
                         </div>
                         <p class="event-desc">歸還租車，結束5天自駕行程</p>
                         <span class="tag tag-transport">交通</span>
+                    </div>
+                </div>
+
+                <div class="transport-between">
+                    <div class="transport-line walk">🚶 步行 約10分鐘</div>
+                </div>
+
+                <div class="event">
+                    <div class="event-time">16:00</div>
+                    <div class="event-card">
+                        <div class="event-title">
+                            <h3>🏨 入住東橫INN 博多口站前</h3>
+                        </div>
+                        <p class="event-desc">辦理入住，放置行李</p>
+                        <a href="https://maps.google.com/?q=東横イン博多口駅前" target="_blank" class="map-link">📍 Google Map</a>
+                        <span class="tag tag-hotel">住宿</span>
                     </div>
                 </div>
             </div>
@@ -1064,7 +1138,7 @@
                         <div class="event-title">
                             <h3>✈️ 福岡起飛返回台北</h3>
                         </div>
-                        <p class="event-desc">結束美好的九州之旅，飛行約2.5小時</p>
+                        <p class="event-desc">結束美好的九州之旅，飛行約2.5小時，20:50 抵達桃園機場</p>
                         <span class="tag tag-transport">航班</span>
                     </div>
                 </div>
