--- a/index.html
+++ b/index.html
@@ -438,9 +438,10 @@
                     <div class="event-time">20:15</div>
                     <div class="event-card">
                         <div class="event-title">
-                            <h3>🏨 入住 OMO5 熊本</h3>
+                            <h3>🏨 <a href="https://maps.google.com/?q=OMO5熊本" target="_blank">入住 OMO5 熊本</a></h3>
                         </div>
                         <p class="event-desc">返回飯店休息</p>
+                        <a href="https://maps.google.com/?q=OMO5熊本" target="_blank" class="map-link">📍 Google Map</a>
                         <span class="tag tag-hotel">住宿</span>
                     </div>
                 </div>
@@ -585,7 +586,7 @@
                     <div class="event-time">17:30</div>
                     <div class="event-card">
                         <div class="event-title">
-                            <h3>🏨 入住 SOLEST 高千穗飯店</h3>
+                            <h3>🏨 <a href="https://maps.google.com/?q=SOLEST高千穂ホテル" target="_blank">入住 SOLEST 高千穗飯店</a></h3>
                         </div>
                         <p class="event-desc">辦理入住，放置行李休息</p>
                         <a href="https://maps.google.com/?q=SOLEST高千穂ホテル" target="_blank" class="map-link">📍 Google Map</a>
@@ -661,7 +662,22 @@
             </div>
             <div class="timeline">
                 <div class="event">
-                    <div class="event-time">09:00 - 10:30</div>
+                    <div class="event-time">08:00 - 09:00</div>
+                    <div class="event-card">
+                        <div class="event-title">
+                            <h3>🍳 飯店早餐</h3>
+                        </div>
+                        <p class="event-desc">享用 SOLEST 高千穗飯店早餐</p>
+                        <span class="tag tag-food">早餐</span>
+                    </div>
+                </div>
+
+                <div class="transport-between">
+                    <div class="transport-line drive">🚗 開車 約10分鐘 → 高千穗峽</div>
+                </div>
+
+                <div class="event">
+                    <div class="event-time">09:30 - 11:00</div>
                     <div class="event-card">
                         <div class="event-title">
                             <h3>🚣 <a href="https://maps.google.com/?q=高千穂峡" target="_blank">高千穗峽划船</a></h3>
@@ -679,27 +695,31 @@
                 </div>
 
                 <div class="transport-between">
-                    <div class="transport-line drive">🚗 開車 約5分鐘</div>
-                </div>
-
-                <div class="event">
-                    <div class="event-time">12:00 - 13:30</div>
-                    <div class="event-card">
-                        <div class="event-title">
-                            <h3>🥩 <a href="https://maps.google.com/?q=高千穂牛レストラン和" target="_blank">午餐：高千穂牛レストラン和</a></h3>
-                        </div>
-                        <p class="event-desc">品嚐當地高千穗牛燒肉</p>
-                        <a href="https://maps.google.com/?q=高千穂牛レストラン和" target="_blank" class="map-link">📍 Google Map</a>
-                        <span class="tag tag-food">美食</span>
-                    </div>
-                </div>
-
-                <div class="transport-between">
                     <div class="transport-line drive">🚗 開車 約10分鐘</div>
                 </div>
 
                 <div class="event">
-                    <div class="event-time">14:00 - 15:30</div>
+                    <div class="event-time">11:30 - 12:30</div>
+                    <div class="event-card">
+                        <div class="event-title">
+                            <h3>🍜 <a href="https://maps.google.com/?q=千穂の家" target="_blank">午餐：高千穗流水麵</a></h3>
+                        </div>
+                        <p class="event-desc">體驗傳統流水素麵，清涼消暑的特色美食</p>
+                        <a href="https://maps.google.com/?q=千穂の家" target="_blank" class="map-link">📍 Google Map</a>
+                        <span class="tag tag-food">美食</span>
+                        <div class="reservation-info">
+                            🕐 營業時間：11:00～15:00<br>
+                            📅 定休日：不定休
+                        </div>
+                    </div>
+                </div>
+
+                <div class="transport-between">
+                    <div class="transport-line drive">🚗 開車 約5分鐘</div>
+                </div>
+
+                <div class="event">
+                    <div class="event-time">12:45 - 14:15</div>
                     <div class="event-card">
                         <div class="event-title">
                             <h3>🚂 <a href="https://maps.google.com/?q=高千穂あまてらす鉄道" target="_blank">高千穗天照鐵道小火車</a></h3>
@@ -718,7 +738,7 @@
                 </div>
 
                 <div class="event">
-                    <div class="event-time">15:35 - 16:05</div>
+                    <div class="event-time">14:20 - 14:50</div>
                     <div class="event-card">
                         <div class="event-title">
                             <h3>🚏 <a href="https://maps.google.com/?q=道の駅高千穂" target="_blank">高千穗道之驛</a></h3>
@@ -734,10 +754,10 @@
                 </div>
 
                 <div class="event">
-                    <div class="event-time">17:30</div>
+                    <div class="event-time">16:20</div>
                     <div class="event-card">
                         <div class="event-title">
-                            <h3>🏨 入住若葉日式旅館</h3>
+                            <h3>🏨 <a href="https://maps.google.com/?q=黒川温泉+旅館わかば" target="_blank">入住若葉日式旅館</a></h3>
                         </div>
                         <p class="event-desc">入住溫泉旅館，辦理入住手續</p>
                         <a href="https://maps.google.com/?q=黒川温泉+旅館わかば" target="_blank" class="map-link">📍 Google Map</a>
@@ -746,7 +766,7 @@
                 </div>
 
                 <div class="event">
-                    <div class="event-time">18:30 - 20:00</div>
+                    <div class="event-time">18:00 - 19:30</div>
                     <div class="event-card">
                         <div class="event-title">
                             <h3>🍽️ 旅館會席晚餐</h3>
@@ -757,7 +777,7 @@
                 </div>
 
                 <div class="event">
-                    <div class="event-time">20:00 - 21:00</div>
+                    <div class="event-time">19:30 - 21:00</div>
                     <div class="event-card">
                         <div class="event-title">
                             <h3>♨️ 溫泉 & 黑川溫泉街夜景</h3>
@@ -797,7 +817,22 @@
             </div>
             <div class="timeline">
                 <div class="event">
-                    <div class="event-time">09:00 - 10:00</div>
+                    <div class="event-time">07:30 - 08:30</div>
+                    <div class="event-card">
+                        <div class="event-title">
+                            <h3>🍳 旅館早餐</h3>
+                        </div>
+                        <p class="event-desc">享用若葉日式旅館早餐</p>
+                        <span class="tag tag-food">早餐</span>
+                    </div>
+                </div>
+
+                <div class="transport-between">
+                    <div class="transport-line drive">🚗 開車 約40分鐘（從黑川）→ 九重夢大吊橋</div>
+                </div>
+
+                <div class="event">
+                    <div class="event-time">09:10 - 10:10</div>
                     <div class="event-card">
                         <div class="event-title">
                             <h3>🌉 <a href="https://maps.google.com/?q=九重夢大吊橋" target="_blank">九重夢大吊橋</a></h3>
@@ -809,11 +844,11 @@
                 </div>
 
                 <div class="transport-between">
-                    <div class="transport-line drive">🚗 開車 約40分鐘（從黑川）+ 約1小時 → 別府</div>
+                    <div class="transport-line drive">🚗 開車 約1小時 → 別府</div>
                 </div>
 
                 <div class="event">
-                    <div class="event-time">12:00 - 13:30</div>
+                    <div class="event-time">11:10 - 12:40</div>
                     <div class="event-card">
                         <div class="event-title">
                             <h3>🍜 別府午餐</h3>
@@ -828,7 +863,7 @@
                 </div>
 
                 <div class="event">
-                    <div class="event-time">14:00 - 15:30</div>
+                    <div class="event-time">13:00 - 14:30</div>
                     <div class="event-card">
                         <div class="event-title">
                             <h3>🚡 <a href="https://maps.google.com/?q=別府ロープウェイ" target="_blank">別府空中纜車</a></h3>
@@ -844,7 +879,7 @@
                 </div>
 
                 <div class="event">
-                    <div class="event-time">15:00 - 17:00</div>
+                    <div class="event-time">14:50 - 16:50</div>
                     <div class="event-card">
                         <div class="event-title">
                             <h3>🔥 <a href="https://maps.google.com/?q=海地獄" target="_blank">別府地獄巡禮</a></h3>
@@ -860,10 +895,10 @@
                 </div>
 
                 <div class="event">
-                    <div class="event-time">17:30</div>
+                    <div class="event-time">17:10</div>
                     <div class="event-card">
                         <div class="event-title">
-                            <h3>🏨 入住別府站前超級飯店</h3>
+                            <h3>🏨 <a href="https://maps.google.com/?q=スーパーホテル別府駅前" target="_blank">入住別府站前超級飯店</a></h3>
                         </div>
                         <p class="event-desc">辦理入住，放置行李</p>
                         <a href="https://maps.google.com/?q=スーパーホテル別府駅前" target="_blank" class="map-link">📍 Google Map</a>
@@ -876,7 +911,7 @@
                 </div>
 
                 <div class="event">
-                    <div class="event-time">18:00 - 19:00</div>
+                    <div class="event-time">17:30 - 18:30</div>
                     <div class="event-card">
                         <div class="event-title">
                             <h3>💊 <a href="https://maps.google.com/?q=ドラッグストアコスモス+別府中島店" target="_blank">Cosmos Beppu Nakashima 藥妝店</a></h3>
@@ -910,7 +945,22 @@
             </div>
             <div class="timeline">
                 <div class="event">
-                    <div class="event-time">10:00 - 12:30</div>
+                    <div class="event-time">08:00 - 09:00</div>
+                    <div class="event-card">
+                        <div class="event-title">
+                            <h3>🍳 飯店早餐</h3>
+                        </div>
+                        <p class="event-desc">享用超級飯店免費早餐</p>
+                        <span class="tag tag-food">早餐</span>
+                    </div>
+                </div>
+
+                <div class="transport-between">
+                    <div class="transport-line drive">🚗 開車 約40分鐘（從別府）→ 九州自然動物園</div>
+                </div>
+
+                <div class="event">
+                    <div class="event-time">09:40 - 12:10</div>
                     <div class="event-card">
                         <div class="event-title">
                             <h3>🦁 <a href="https://maps.google.com/?q=アフリカンサファリ" target="_blank">九州自然動物園</a></h3>
@@ -922,11 +972,11 @@
                 </div>
 
                 <div class="transport-between">
-                    <div class="transport-line drive">🚗 開車 約40分鐘（從別府）+ 約20分鐘 → 由布院</div>
+                    <div class="transport-line drive">🚗 開車 約20分鐘 → 由布院</div>
                 </div>
 
                 <div class="event">
-                    <div class="event-time">13:00 - 14:00</div>
+                    <div class="event-time">12:30 - 13:30</div>
                     <div class="event-card">
                         <div class="event-title">
                             <h3>🍽️ 午餐</h3>
@@ -941,7 +991,7 @@
                 </div>
 
                 <div class="event">
-                    <div class="event-time">14:15</div>
+                    <div class="event-time">13:45</div>
                     <div class="event-card">
                         <div class="event-title">
                             <h3>🏨 入住溫柔之鄉</h3>
@@ -957,7 +1007,7 @@
                 </div>
 
                 <div class="event">
-                    <div class="event-time">15:00 - 17:30</div>
+                    <div class="event-time">14:00 - 17:00</div>
                     <div class="event-card">
                         <div class="event-title">
                             <h3>🌅 <a href="https://maps.google.com/?q=金鱗湖" target="_blank">金鱗湖 / 湯之坪街道</a></h3>
@@ -974,7 +1024,7 @@
                 </div>
 
                 <div class="event">
-                    <div class="event-time">18:00</div>
+                    <div class="event-time">17:30</div>
                     <div class="event-card">
                         <div class="event-title">
                             <h3>🍽️ 旅館晚餐</h3>
@@ -1074,7 +1124,7 @@
                     <div class="event-time">16:00</div>
                     <div class="event-card">
                         <div class="event-title">
-                            <h3>🏨 入住東橫INN 博多口站前</h3>
+                            <h3>🏨 <a href="https://maps.google.com/?q=東横イン博多口駅前" target="_blank">入住東橫INN 博多口站前</a></h3>
                         </div>
                         <p class="event-desc">辦理入住，放置行李</p>
                         <a href="https://maps.google.com/?q=東横イン博多口駅前" target="_blank" class="map-link">📍 Google Map</a>
