--- a/index.html
+++ b/index.html
@@ -1068,60 +1068,60 @@
                     </div>
                 </div>
 
-                <div class="transport-between">
-                    <div class="transport-line drive">🚗 開車 約1.5小時 → 太宰府</div>
-                </div>
+                 <div class="transport-between">
+                     <div class="transport-line drive">🚗 開車 約1小時 → 浮羽道之驛</div>
+                 </div>
 
-                <div class="event">
-                    <div class="event-time">11:00 - 13:00</div>
-                    <div class="event-card">
-                        <div class="event-title">
-                            <h3>⛩️ <a href="https://maps.google.com/?q=太宰府天満宮" target="_blank">太宰府天滿宮</a></h3>
-                        </div>
-                        <p class="event-desc">學問之神菅原道真公的總本社，必吃梅枝餅</p>
-                        <a href="https://maps.google.com/?q=太宰府天満宮" target="_blank" class="map-link">📍 Google Map</a>
-                        <span class="tag tag-attraction">景點</span>
-                        <span class="tag tag-food">美食</span>
-                    </div>
-                </div>
+                 <div class="event">
+                     <div class="event-time">10:30 - 11:00</div>
+                     <div class="event-card">
+                         <div class="event-title">
+                             <h3>🚏 <a href="https://maps.google.com/?q=道の駅うきは" target="_blank">浮羽道之驛</a></h3>
+                         </div>
+                         <p class="event-desc">水果王國，新鮮水果與甜點（停留約30分鐘）</p>
+                         <a href="https://maps.google.com/?q=道の駅うきは" target="_blank" class="map-link">📍 Google Map</a>
+                         <span class="tag tag-shopping">休息站</span>
+                     </div>
+                 </div>
 
-                <div class="transport-between">
-                    <div class="transport-line drive">🚗 開車 約40分鐘 → 浮羽</div>
-                </div>
+                 <div class="transport-between">
+                     <div class="transport-line drive">🚗 開車 約40分鐘 → 太宰府</div>
+                 </div>
 
-                <div class="event">
-                    <div class="event-time">13:40 - 14:10</div>
-                    <div class="event-card">
-                        <div class="event-title">
-                            <h3>🚏 <a href="https://maps.google.com/?q=道の駅うきは" target="_blank">浮羽道之驛</a></h3>
-                        </div>
-                        <p class="event-desc">水果王國，新鮮水果與甜點（停留約30分鐘）</p>
-                        <a href="https://maps.google.com/?q=道の駅うきは" target="_blank" class="map-link">📍 Google Map</a>
-                        <span class="tag tag-shopping">休息站</span>
-                    </div>
-                </div>
+                 <div class="event">
+                     <div class="event-time">11:40 - 13:40</div>
+                     <div class="event-card">
+                         <div class="event-title">
+                             <h3>⛩️ <a href="https://maps.google.com/?q=太宰府天満宮" target="_blank">太宰府天滿宮</a></h3>
+                         </div>
+                         <p class="event-desc">學問之神菅原道真公的總本社，必吃梅枝餅</p>
+                         <a href="https://maps.google.com/?q=太宰府天満宮" target="_blank" class="map-link">📍 Google Map</a>
+                         <span class="tag tag-attraction">景點</span>
+                         <span class="tag tag-food">美食</span>
+                     </div>
+                 </div>
 
-                <div class="transport-between">
-                    <div class="transport-line drive">🚗 開車 約1小時 → 福岡還車點</div>
-                </div>
+                 <div class="transport-between">
+                     <div class="transport-line drive">🚗 開車 約30分鐘 → 福岡還車點</div>
+                 </div>
 
-                <div class="event">
-                    <div class="event-time">15:30</div>
-                    <div class="event-card">
-                        <div class="event-title">
-                            <h3>🚗 福岡還車</h3>
-                        </div>
-                        <p class="event-desc">歸還租車，結束5天自駕行程</p>
-                        <span class="tag tag-transport">交通</span>
-                    </div>
-                </div>
+                 <div class="event">
+                     <div class="event-time">14:10</div>
+                     <div class="event-card">
+                         <div class="event-title">
+                             <h3>🚗 福岡還車</h3>
+                         </div>
+                         <p class="event-desc">歸還租車，結束5天自駕行程</p>
+                         <span class="tag tag-transport">交通</span>
+                     </div>
+                 </div>
 
-                <div class="transport-between">
-                    <div class="transport-line walk">🚶 步行 約10分鐘</div>
-                </div>
+                 <div class="transport-between">
+                     <div class="transport-line walk">🚶 步行 約10分鐘</div>
+                 </div>
 
-                <div class="event">
-                    <div class="event-time">16:00</div>
+                 <div class="event">
+                     <div class="event-time">14:20</div>
                     <div class="event-card">
                         <div class="event-title">
                             <h3>🏨 <a href="https://maps.google.com/?q=東横イン博多口駅前" target="_blank">入住東橫INN 博多口站前</a></h3>
