--- a/index.html
+++ b/index.html
@@ -1055,9 +1055,25 @@
                     <span><span class="status-pending">現場付款（可用積分折抵）</span></span>
                 </div>
             </div>
-            <div class="timeline">
-                <div class="event">
-                    <div class="event-time">09:00 - 09:30</div>
+             <div class="timeline">
+                 <div class="event">
+                     <div class="event-time">08:00 - 09:00</div>
+                     <div class="event-card">
+                         <div class="event-title">
+                             <h3>🍳 <a href="https://maps.google.com/?q=湯の坪街道+由布院" target="_blank">早餐：湯之坪街道餐點</a></h3>
+                         </div>
+                         <p class="event-desc">在湯之坪街道享用特色早餐，體驗由布院當地風情</p>
+                         <a href="https://maps.google.com/?q=湯の坪街道+由布院" target="_blank" class="map-link">📍 Google Map</a>
+                         <span class="tag tag-food">早餐</span>
+                     </div>
+                 </div>
+
+                 <div class="transport-between">
+                     <div class="transport-line walk">🚶 步行 約5分鐘 → 由布院道之驛</div>
+                 </div>
+
+                 <div class="event">
+                     <div class="event-time">09:00 - 09:30</div>
                     <div class="event-card">
                         <div class="event-title">
                             <h3>🚏 <a href="https://maps.google.com/?q=道の駅ゆふいん" target="_blank">由布院道之驛</a></h3>
