--- a/index.html
+++ b/index.html
@@ -1166,9 +1166,20 @@
                 </div>
                 <span class="accommodation-badge">✈️ 19:10 返程</span>
             </div>
-            <div class="timeline">
-                <div class="event">
-                    <div class="event-time">09:00 - 14:00</div>
+             <div class="timeline">
+                 <div class="event">
+                     <div class="event-time">08:00 - 09:00</div>
+                     <div class="event-card">
+                         <div class="event-title">
+                             <h3>🍳 飯店早餐</h3>
+                         </div>
+                         <p class="event-desc">享用東橫INN 博多口站前免費早餐</p>
+                         <span class="tag tag-food">早餐</span>
+                     </div>
+                 </div>
+
+                 <div class="event">
+                     <div class="event-time">09:00 - 14:00</div>
                     <div class="event-card">
                         <div class="event-title">
                             <h3>🏙️ <a href="https://maps.google.com/?q=キャナルシティ博多" target="_blank">福岡市區自由行</a></h3>
@@ -1186,17 +1197,17 @@
                     <div class="transport-line train">🚇 地下鐵 約5分鐘 ¥260 → 福岡機場</div>
                 </div>
 
-                <div class="event">
-                    <div class="event-time">15:00</div>
-                    <div class="event-card">
-                        <div class="event-title">
-                            <h3>🚇 <a href="https://maps.google.com/?q=福岡空港" target="_blank">前往福岡機場</a></h3>
-                        </div>
-                        <p class="event-desc">搭乘地下鐵前往機場，預留充足時間辦理登機手續</p>
-                        <a href="https://maps.google.com/?q=福岡空港" target="_blank" class="map-link">📍 Google Map</a>
-                        <span class="tag tag-transport">交通</span>
-                    </div>
-                </div>
+                 <div class="event">
+                     <div class="event-time">14:00</div>
+                     <div class="event-card">
+                         <div class="event-title">
+                             <h3>🚇 <a href="https://maps.google.com/?q=福岡空港" target="_blank">前往福岡機場</a></h3>
+                         </div>
+                         <p class="event-desc">搭乘地下鐵前往機場，預留充足時間辦理登機手續</p>
+                         <a href="https://maps.google.com/?q=福岡空港" target="_blank" class="map-link">📍 Google Map</a>
+                         <span class="tag tag-transport">交通</span>
+                     </div>
+                 </div>
 
                 <div class="event">
                     <div class="event-time">19:10</div>
