--- a/index.html
+++ b/index.html
@@ -330,29 +330,23 @@
                 </div>
 
                 <div class="event">
-                    <div class="event-time">12:30 - 13:00</div>
+                    <div class="event-time">12:15 - 13:00</div>
                     <div class="event-card">
                         <div class="event-title">
-                            <h3>🍱 <a href="https://maps.google.com/?q=桜の馬場城彩苑" target="_blank">櫻之馬場城彩苑</a></h3>
+                            <h3>🍱 <a href="https://maps.google.com/?q=OMO5熊本" target="_blank">市區午餐</a></h3>
                         </div>
-                        <p class="event-desc">城下町風情商店街，快速午餐與選購伴手禮</p>
-                        <a href="https://maps.google.com/?q=桜の馬場城彩苑" target="_blank" class="map-link">📍 Google Map</a>
+                        <p class="event-desc">在 OMO5 附近或鶴屋百貨享用快速午餐，準備參加部長見面會</p>
                         <span class="tag tag-food">美食</span>
-                        <span class="tag tag-shopping">購物</span>
                     </div>
                 </div>
 
-                <div class="transport-between">
-                    <div class="transport-line train">🚃 路面電車 約10分鐘 ¥170 → 熊本站</div>
-                </div>
-
                 <div class="event">
-                    <div class="event-time">13:00 - 15:30</div>
+                    <div class="event-time">13:00 - 15:00</div>
                     <div class="event-card">
                         <div class="event-title">
                             <h3>🐻 <a href="https://maps.google.com/?q=くまモンスクエア" target="_blank">熊本熊廣場</a></h3>
                         </div>
-                        <p class="event-desc">觀看熊本熊部長表演</p>
+                        <p class="event-desc">觀看熊本熊部長表演，與部長近距離互動（待到下午3點）</p>
                         <a href="https://maps.google.com/?q=くまモンスクエア" target="_blank" class="map-link">📍 Google Map</a>
                         <span class="tag tag-attraction">景點</span>
                         <div class="reservation-info">
@@ -362,11 +356,11 @@
                 </div>
 
                 <div class="transport-between">
-                    <div class="transport-line train">🚃 路面電車 約10分鐘 ¥170 → 熊本城前</div>
+                    <div class="transport-line walk">🚶 步行 約15分鐘 或 路面電車</div>
                 </div>
 
                 <div class="event">
-                    <div class="event-time">15:45 - 17:15</div>
+                    <div class="event-time">15:15 - 16:45</div>
                     <div class="event-card">
                         <div class="event-title">
                             <h3>🏯 <a href="https://maps.google.com/?q=熊本城" target="_blank">熊本城</a></h3>
@@ -378,33 +372,18 @@
                 </div>
 
                 <div class="transport-between">
-                    <div class="transport-line walk">🚶 步行 約10分鐘</div>
+                    <div class="transport-line walk">🚶 步行 約5分鐘</div>
                 </div>
 
                 <div class="event">
-                    <div class="event-time">17:25 - 17:55</div>
+                    <div class="event-time">16:50 - 17:50</div>
                     <div class="event-card">
                         <div class="event-title">
-                            <h3>🌆 <a href="https://maps.google.com/?q=熊本市役所" target="_blank">熊本市役所十四樓展望台</a></h3>
+                            <h3>🍱 <a href="https://maps.google.com/?q=桜の馬場城彩苑" target="_blank">櫻之馬場城彩苑</a></h3>
                         </div>
-                        <p class="event-desc">免費展望台，俯瞰熊本市區與熊本城全景</p>
-                        <a href="https://maps.google.com/?q=熊本市役所" target="_blank" class="map-link">📍 Google Map</a>
-                        <span class="tag tag-attraction">景點</span>
-                    </div>
-                </div>
-
-                <div class="transport-between">
-                    <div class="transport-line train">🚃 路面電車 約10分鐘 ¥170 → 熊本站</div>
-                </div>
-
-                <div class="event">
-                    <div class="event-time">18:05 - 18:35</div>
-                    <div class="event-card">
-                        <div class="event-title">
-                            <h3>🛍️ <a href="https://maps.google.com/?q=肥後よかモン市場" target="_blank">肥後YOKAMON市場</a></h3>
-                        </div>
-                        <p class="event-desc">必買：TRANDOR半熟蛋咖哩麵包、MIGNON泡芙</p>
-                        <a href="https://maps.google.com/?q=肥後よかモン市場" target="_blank" class="map-link">📍 Google Map</a>
+                        <p class="event-desc">城下町風情商店街，選購伴手禮與品嚐特色小吃</p>
+                        <a href="https://maps.google.com/?q=桜の馬場城彩苑" target="_blank" class="map-link">📍 Google Map</a>
+                        <span class="tag tag-food">美食</span>
                         <span class="tag tag-shopping">購物</span>
                     </div>
                 </div>
@@ -514,23 +493,7 @@
                 </div>
 
                 <div class="event">
-                    <div class="event-time">12:15 - 12:45</div>
-                    <div class="event-card">
-                        <div class="event-title">
-                            <h3>🚏 <a href="https://maps.google.com/?q=道の駅阿蘇" target="_blank">阿蘇道之驛</a></h3>
-                        </div>
-                        <p class="event-desc">阿蘇特產與當地農產品（停留約30分鐘）</p>
-                        <a href="https://maps.google.com/?q=道の駅阿蘇" target="_blank" class="map-link">📍 Google Map</a>
-                        <span class="tag tag-shopping">休息站</span>
-                    </div>
-                </div>
-
-                <div class="transport-between">
-                    <div class="transport-line drive">🚗 開車 約5分鐘 → ごとう屋</div>
-                </div>
-
-                <div class="event">
-                    <div class="event-time">12:50 - 13:40</div>
+                    <div class="event-time">12:15 - 13:05</div>
                     <div class="event-card">
                         <div class="event-title">
                             <h3>🥩 <a href="https://maps.google.com/?q=あか牛丼専門店+ごとう屋+阿蘇店" target="_blank">午餐：あか牛丼専門店 ごとう屋阿蘇店</a></h3>
@@ -543,6 +506,28 @@
                             📅 定休日：第3週三<br>
                             🌐 官網：<a href="https://asogotoya.jp/" target="_blank">asogotoya.jp</a>
                         </div>
+                    </div>
+                </div>
+
+                <div class="transport-between">
+                    <div class="transport-line drive">🚗 開車 約5分鐘 → 阿蘇道之驛</div>
+                </div>
+
+                <div class="event">
+                    <div class="event-time">13:10 - 13:40</div>
+                    <div class="event-card">
+                        <div class="event-title">
+                            <h3>🚏 <a href="https://maps.google.com/?q=道の駅阿蘇" target="_blank">阿蘇道之驛</a></h3>
+                        </div>
+                        <p class="event-desc">阿蘇特產與當地農產品（停留約30分鐘）</p>
+                        <a href="https://maps.google.com/?q=道の駅阿蘇" target="_blank" class="map-link">📍 Google Map</a>
+                        <div class="reservation-info">
+                            🎁 推薦必買伴手禮：<br>
+                            🥛 阿蘇牛奶 (ASO MILK) 與乳製品<br>
+                            🍓 當季新鮮水果（2月草莓）<br>
+                            🥩 阿蘇赤牛加工品（牛肉乾、肉醬）
+                        </div>
+                        <span class="tag tag-shopping">休息站</span>
                     </div>
                 </div>
 
@@ -745,6 +730,12 @@
                         </div>
                         <p class="event-desc">選購當地特產與紀念品（停留約30分鐘）</p>
                         <a href="https://maps.google.com/?q=道の駅高千穂" target="_blank" class="map-link">📍 Google Map</a>
+                        <div class="reservation-info">
+                            🎁 推薦必買伴手禮：<br>
+                            🥩 高千穗牛加工食品<br>
+                            🍶 當地釀造柚子胡椒<br>
+                            👺 神樂相關手工藝品與紀念品
+                        </div>
                         <span class="tag tag-shopping">休息站</span>
                     </div>
                 </div>
@@ -1080,6 +1071,12 @@
                         </div>
                         <p class="event-desc">最後巡禮由布院，採購伴手禮（停留約30分鐘）</p>
                         <a href="https://maps.google.com/?q=道の駅ゆふいん" target="_blank" class="map-link">📍 Google Map</a>
+                        <div class="reservation-info">
+                            🎁 推薦必買伴手禮：<br>
+                            🍵 湯布院茶與在地茶葉<br>
+                            🍯 特製果醬與蜂蜜<br>
+                            🥨 由布院限定甜點與餅乾
+                        </div>
                         <span class="tag tag-shopping">休息站</span>
                     </div>
                 </div>
@@ -1095,8 +1092,14 @@
                              <h3>🚏 <a href="https://maps.google.com/?q=道の駅うきは" target="_blank">浮羽道之驛</a></h3>
                          </div>
                          <p class="event-desc">水果王國，新鮮水果與甜點（停留約30分鐘）</p>
-                         <a href="https://maps.google.com/?q=道の駅うきは" target="_blank" class="map-link">📍 Google Map</a>
-                         <span class="tag tag-shopping">休息站</span>
+                        <a href="https://maps.google.com/?q=道の駅うきは" target="_blank" class="map-link">📍 Google Map</a>
+                        <div class="reservation-info">
+                            🎁 推薦必買伴手禮：<br>
+                            🍓 水果王國直送當季草莓<br>
+                            🧁 浮羽產小麥製成的手工甜點<br>
+                            🍵 浮羽特色茶葉與農產加工品
+                        </div>
+                        <span class="tag tag-shopping">休息站</span>
                      </div>
                  </div>
 
