新增櫻之馬場城彩苑推薦伴手禮：馬肉加工品、特色甜點、乳製品

--- a/index.html
+++ b/index.html
@@ -383,6 +383,12 @@
                         </div>
                         <p class="event-desc">城下町風情商店街，選購伴手禮與品嚐特色小吃</p>
                         <a href="https://maps.google.com/?q=桜の馬場城彩苑" target="_blank" class="map-link">📍 Google Map</a>
+                        <div class="reservation-info">
+                            🎁 推薦必買伴手禮：<br>
+                            🐴 熊本馬肉加工品（馬肉乾、馬肉醬）<br>
+                            🍪 當地特色甜點與和菓子<br>
+                            🥛 熊本乳製品與乳酪
+                        </div>
                         <span class="tag tag-food">美食</span>
                         <span class="tag tag-shopping">購物</span>
                     </div>
