--- a/index.html
+++ b/index.html
@@ -618,10 +618,18 @@
                             🕐 營業時間：11:00-14:30 / 17:00-21:00<br>
                             📅 定休日：週三<br>
                             📞 電話：<a href="tel:0982-73-1109">0982-73-1109</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+                     </div>
+                 </div>
+             </div>
+             <div class="notes">
+                 <h4>注意事項</h4>
+                 <ul>
+                     <li>九重夢大吊橋可能因天候關閉，建議提前確認</li>
+                     <li>自駕前往別府請注意交通狀況，建議預留緩衝時間</li>
+                     <li>地獄巡禮建議下午參觀，避免早高峰擁擠</li>
+                 </ul>
+             </div>
+         </div>
             <div class="notes">
                 <h4>注意事項</h4>
                 <ul>
@@ -844,48 +852,68 @@
                     <div class="transport-line drive">🚗 開車 約1小時 → 別府</div>
                 </div>
 
-                <div class="event">
-                    <div class="event-time">11:10 - 12:40</div>
-                    <div class="event-card">
-                        <div class="event-title">
-                            <h3>🍜 別府午餐</h3>
-                        </div>
-                        <p class="event-desc">品嚐別府在地美食</p>
-                        <span class="tag tag-food">美食</span>
-                    </div>
-                </div>
+                 <div class="event">
+                     <div class="event-time">11:10 - 12:40</div>
+                     <div class="event-card">
+                         <div class="event-title">
+                             <h3>🍜 <a href="https://maps.google.com/?q=あごだしラーメン+麺処+あご旬" target="_blank">午餐：あごだしラーメン 麺処 あご旬</a></h3>
+                         </div>
+                         <p class="event-desc">品嚐別府名物飛魚湯拉麵，濃郁鮮美的在地美食</p>
+                         <a href="https://maps.google.com/?q=あごだしラーメン+麺処+あご旬" target="_blank" class="map-link">📍 Google Map</a>
+                         <span class="tag tag-food">美食</span>
+                         <div class="reservation-info">
+                             🕐 營業時間：11:00～15:00 / 17:00～22:00<br>
+                             📅 定休日：週三<br>
+                             📞 電話：<a href="tel:0977-67-8252">0977-67-8252</a><br>
+                             🌐 官網：<a href="https://www.agoshun.jp/" target="_blank">agoshun.jp</a>
+                         </div>
+                     </div>
+                 </div>
 
                 <div class="transport-between">
                     <div class="transport-line drive">🚗 開車 約15分鐘 → 別府纜車站</div>
                 </div>
 
-                <div class="event">
-                    <div class="event-time">13:00 - 14:30</div>
-                    <div class="event-card">
-                        <div class="event-title">
-                            <h3>🚡 <a href="https://maps.google.com/?q=別府ロープウェイ" target="_blank">別府空中纜車</a></h3>
-                        </div>
-                        <p class="event-desc">搭乘纜車登上鶴見岳，俯瞰別府灣全景</p>
-                        <a href="https://maps.google.com/?q=別府ロープウェイ" target="_blank" class="map-link">📍 Google Map</a>
-                        <span class="tag tag-attraction">景點</span>
-                    </div>
-                </div>
+                 <div class="event">
+                     <div class="event-time">13:00 - 14:30</div>
+                     <div class="event-card">
+                         <div class="event-title">
+                             <h3>🚡 <a href="https://maps.google.com/?q=別府ロープウェイ" target="_blank">別府空中纜車</a></h3>
+                         </div>
+                         <p class="event-desc">搭乘纜車登上鶴見岳，俯瞰別府灣全景</p>
+                         <a href="https://maps.google.com/?q=別府ロープウェイ" target="_blank" class="map-link">📍 Google Map</a>
+                         <span class="tag tag-attraction">景點</span>
+                         <div class="reservation-info">
+                             🕐 營業時間：9:00～17:00（夏季延長至18:00）<br>
+                             💰 纜車票價：往返 ¥1,800（大人）、¥900（兒童）<br>
+                             📞 預約電話：<a href="tel:0977-66-5127">0977-66-5127</a><br>
+                             🌐 官網：<a href="https://www.beppu.co.jp/zh/" target="_blank">beppu.co.jp</a>
+                         </div>
+                     </div>
+                 </div>
 
                 <div class="transport-between">
                     <div class="transport-line drive">🚗 開車 約10分鐘 → 地獄區域</div>
                 </div>
 
-                <div class="event">
-                    <div class="event-time">14:50 - 16:50</div>
-                    <div class="event-card">
-                        <div class="event-title">
-                            <h3>🔥 <a href="https://maps.google.com/?q=海地獄" target="_blank">別府地獄巡禮</a></h3>
-                        </div>
-                        <p class="event-desc">參觀海地獄、血池地獄等特色溫泉景觀</p>
-                        <a href="https://maps.google.com/?q=海地獄" target="_blank" class="map-link">📍 Google Map</a>
-                        <span class="tag tag-attraction">景點</span>
-                    </div>
-                </div>
+                 <div class="event">
+                     <div class="event-time">14:50 - 16:50</div>
+                     <div class="event-card">
+                         <div class="event-title">
+                             <h3>🔥 <a href="https://maps.google.com/?q=海地獄" target="_blank">別府地獄巡禮</a></h3>
+                         </div>
+                         <p class="event-desc">參觀海地獄、血池地獄等特色溫泉景觀</p>
+                         <a href="https://maps.google.com/?q=海地獄" target="_blank" class="map-link">📍 Google Map</a>
+                         <span class="tag tag-attraction">景點</span>
+                         <div class="reservation-info">
+                             🕐 營業時間：8:00～17:00<br>
+                             💰 入園券：¥400（大人）、¥200（兒童）<br>
+                             📞 諮詢電話：<a href="tel:0977-66-1577">0977-66-1577</a><br>
+                             🌐 官網：<a href="https://www.beppu-jigoku.com/" target="_blank">beppu-jigoku.com</a><br>
+                             ⚠️ 建議先參觀海地獄，再依順序巡覽其他地獄
+                         </div>
+                     </div>
+                 </div>
 
                 <div class="transport-between">
                     <div class="transport-line drive">🚗 開車 約15分鐘 → 別府市區</div>
