Add budget estimate to footer

--- a/index.html
+++ b/index.html
@@ -1269,6 +1269,7 @@
         <footer>
             <div class="totoro-decoration">🌳🚶‍♂️🌸</div>
             <p>🗾 九州自駕七日遊 | 2026年2月16日 - 22日</p>
+            <p style="font-size: 0.9rem;">預估總費用（2成人2兒童）：NT$ 85,000-95,000（含機票、住宿、自駕車、餐飲、門票）</p>
             <p style="font-size: 0.9rem;">祝旅途愉快！いってらっしゃい！</p>
         </footer>
     </div>
