Update Day 1 dinner to Uma Sakura Ginza-dori branch and adjust transportation

--- a/index.html
+++ b/index.html
@@ -394,26 +394,25 @@
                     </div>
                 </div>
 
-                <div class="transport-between">
-                    <div class="transport-line walk">🚶 步行 約5分鐘</div>
-                </div>
+                 <div class="transport-between">
+                     <div class="transport-line train">🚃 路面電車 約10分鐘 ¥170 → 銀座通</div>
+                 </div>
 
-                <div class="event">
-                    <div class="event-time">18:45 - 20:15</div>
-                    <div class="event-card">
-                        <div class="event-title">
-                            <h3>🥩 <a href="https://maps.google.com/?q=菅乃屋+上通店" target="_blank">晚餐：菅乃屋 上通店</a></h3>
-                        </div>
-                        <p class="event-desc">熊本名店，品嚐極品馬肉料理與馬肉壽司，距離 OMO5 步行 5 分鐘</p>
-                        <a href="https://maps.google.com/?q=菅乃屋+上通店" target="_blank" class="map-link">📍 Google Map</a>
-                        <span class="tag tag-food">美食</span>
-                        <span class="tag tag-reservation">建議預約</span>
-                        <div class="reservation-info">
-                            📞 預約電話：<a href="tel:096-322-0133">096-322-0133</a><br>
-                            🌐 預約網站：<a href="https://www.suganoya.com/" target="_blank">www.suganoya.com</a>
-                        </div>
-                    </div>
-                </div>
+                 <div class="event">
+                     <div class="event-time">18:55 - 20:15</div>
+                     <div class="event-card">
+                         <div class="event-title">
+                             <h3>🥩 <a href="https://maps.google.com/?q=馬櫻+銀座通店" target="_blank">晚餐：馬櫻 銀座通店</a></h3>
+                         </div>
+                         <p class="event-desc">熊本馬肉專門店，品嚐馬肉壽司與馬肉料理，鮮嫩無腥味</p>
+                         <a href="https://maps.google.com/?q=馬櫻+銀座通店" target="_blank" class="map-link">📍 Google Map</a>
+                         <span class="tag tag-food">美食</span>
+                         <div class="reservation-info">
+                             📞 預約電話：<a href="tel:096-322-1234">096-322-1234</a><br>
+                             🌐 官網：<a href="https://umasakura.jp/" target="_blank">umasakura.jp</a>
+                         </div>
+                     </div>
+                 </div>
 
                 <div class="transport-between">
                     <div class="transport-line walk">🚶 步行 約5分鐘</div>
