Update Day 1 dinner time to 18:30 and add shopping at Don Quijote Shimotori

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                  </div>
 
                  <div class="event">
-                     <div class="event-time">18:55 - 20:15</div>
+                     <div class="event-time">18:30 - 20:30</div>
                      <div class="event-card">
                          <div class="event-title">
                              <h3>🥩 <a href="https://maps.google.com/?q=馬櫻+銀座通店" target="_blank">晚餐：馬櫻 銀座通店</a></h3>
@@ -411,6 +411,22 @@
                              📞 預約電話：<a href="tel:096-322-1234">096-322-1234</a><br>
                              🌐 官網：<a href="https://umasakura.jp/" target="_blank">umasakura.jp</a>
                          </div>
+                     </div>
+                 </div>
+
+                 <div class="transport-between">
+                     <div class="transport-line walk">🚶 步行 約5分鐘 → 唐吉軻德下通店</div>
+                 </div>
+
+                 <div class="event">
+                     <div class="event-time">20:35 - 21:30</div>
+                     <div class="event-card">
+                         <div class="event-title">
+                             <h3>🛒 <a href="https://maps.google.com/?q=ドンキホーテ+下通り店" target="_blank">唐吉軻德下通店</a></h3>
+                         </div>
+                         <p class="event-desc">購物日用品、零食與藥妝，24小時營業方便採購</p>
+                         <a href="https://maps.google.com/?q=ドンキホーテ+下通り店" target="_blank" class="map-link">📍 Google Map</a>
+                         <span class="tag tag-shopping">購物</span>
                      </div>
                  </div>
 
