Fix indentation for Day 2 closing tags

--- a/index.html
+++ b/index.html
@@ -629,10 +629,11 @@
                         <p class="event-desc">品嚐當地高千穗牛燒肉，鮮嫩多汁的在地美食</p>
                         <a href="https://maps.google.com/?q=高千穂牛レストラン和" target="_blank" class="map-link">📍 Google Map</a>
                         <span class="tag tag-food">美食</span>
-                        <div class="reservation-info">
-                            🕐 營業時間：11:00-14:30 / 17:00-21:00<br>
-                            📅 定休日：週三<br>
-                            📞 電話：<a href="tel:0982-73-1109">0982-73-1109</a>
+                         <div class="reservation-info">
+                             🕐 營業時間：11:00-14:30 / 17:00-21:00<br>
+                             📅 定休日：週三<br>
+                             📞 電話：<a href="tel:0982-73-1109">0982-73-1109</a>
+                         </div>
                      </div>
                  </div>
              </div>
