Add notes section to Day 4 with travel advisories

--- a/index.html
+++ b/index.html
@@ -951,12 +951,20 @@
                         <p class="event-desc">ドラッグストアコスモス 別府中島店 - 採購日本藥妝與生活用品</p>
                         <a href="https://maps.google.com/?q=ドラッグストアコスモス+別府中島店" target="_blank" class="map-link">📍 Google Map</a>
                         <span class="tag tag-shopping">購物</span>
-                    </div>
-                </div>
-            </div>
-        </div>
+                     </div>
+                 </div>
+             </div>
+             <div class="notes">
+                 <h4>注意事項</h4>
+                 <ul>
+                     <li>九重夢大吊橋可能因天候關閉，建議提前確認</li>
+                     <li>自駕前往別府請注意交通狀況，建議預留緩衝時間</li>
+                     <li>地獄巡禮建議下午參觀，避免早高峰擁擠</li>
+                 </ul>
+             </div>
+         </div>
 
-        <!-- Day 5 -->
+         <!-- Day 5 -->
         <div class="day-card day-5">
             <div class="day-header">
                 <div>
