--- a/index.html
+++ b/index.html
@@ -509,30 +509,30 @@
                     </div>
                 </div>
 
-                <div class="transport-between">
-                     <div class="transport-line drive">🚗 開車 約20-30分鐘 → 阿蘇道之驛</div>
-                </div>
+                 <div class="transport-between">
+                     <div class="transport-line drive">🚗 開車 約20-30分鐘 → ごとう屋阿蘇店</div>
+                 </div>
 
-                <div class="event">
-                    <div class="event-time">12:15 - 13:05</div>
-                    <div class="event-card">
-                        <div class="event-title">
-                            <h3>🥩 <a href="https://maps.google.com/?q=あか牛丼専門店+ごとう屋+阿蘇店" target="_blank">午餐：あか牛丼専門店 ごとう屋阿蘇店</a></h3>
-                        </div>
-                        <p class="event-desc">阿蘇名物赤牛丼，鮮嫩多汁的在地美食</p>
-                        <a href="https://maps.google.com/?q=あか牛丼専門店+ごとう屋+阿蘇店" target="_blank" class="map-link">📍 Google Map</a>
-                        <span class="tag tag-food">美食</span>
-                        <div class="reservation-info">
-                            🕐 營業時間：10:30～16:00（L.O. 15:30）<br>
-                            📅 定休日：第3週三<br>
-                            🌐 官網：<a href="https://asogotoya.jp/" target="_blank">asogotoya.jp</a>
-                        </div>
-                    </div>
-                </div>
+                 <div class="event">
+                     <div class="event-time">12:15 - 13:05</div>
+                     <div class="event-card">
+                         <div class="event-title">
+                             <h3>🥩 <a href="https://maps.google.com/?q=あか牛丼専門店+ごとう屋+阿蘇店" target="_blank">午餐：あか牛丼専門店 ごとう屋阿蘇店</a></h3>
+                         </div>
+                         <p class="event-desc">阿蘇名物赤牛丼，鮮嫩多汁的在地美食</p>
+                         <a href="https://maps.google.com/?q=あか牛丼専門店+ごとう屋+阿蘇店" target="_blank" class="map-link">📍 Google Map</a>
+                         <span class="tag tag-food">美食</span>
+                         <div class="reservation-info">
+                             🕐 營業時間：10:30～16:00（L.O. 15:30）<br>
+                             📅 定休日：第3週三<br>
+                             🌐 官網：<a href="https://asogotoya.jp/" target="_blank">asogotoya.jp</a>
+                         </div>
+                     </div>
+                 </div>
 
-                <div class="transport-between">
-                    <div class="transport-line drive">🚗 開車 約5分鐘 → 阿蘇道之驛</div>
-                </div>
+                 <div class="transport-between">
+                     <div class="transport-line drive">🚗 開車 約5分鐘 → 阿蘇道之驛</div>
+                 </div>
 
                 <div class="event">
                     <div class="event-time">13:10 - 13:40</div>
